--- a/SmartHydroponicsSystem/app/src/main/res/values/strings.xml
+++ b/SmartHydroponicsSystem/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="plant_info">식물 정보</string>
     <string name="system_control">시스템 관리</string>
     <string name="connection_control">연결 관리</string>
+    <string name="lettuce">상추</string>
 </resources>
