--- a/SmartHydroponicsSystem/app/src/main/res/values/strings.xml
+++ b/SmartHydroponicsSystem/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="system_control">시스템 관리</string>
     <string name="connection_control">연결 관리</string>
     <string name="lettuce">상추</string>
+    <string name="tds_title">적정 TDS 농도</string>
 </resources>
