fix: RecyclerView Item UI 원하는대로 나오도록 수정
Issue #6 참고

--- a/SmartHydroponicsSystem/app/src/main/res/values/strings.xml
+++ b/SmartHydroponicsSystem/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="connection_control">연결 관리</string>
     <string name="lettuce">상추</string>
     <string name="tds_title">적정 TDS 농도</string>
+    <string name="plant_image_description">식물 이미지</string>
 </resources>
